# base-fastapi

./: .env  .gitignore  __init__.py  main.py  pyproject.toml
src/application/auth/dto/: __init__.py  login.py  register.py
src/application/auth/interfaces/: __init__.py  login.py  register.py
src/application/auth/service/: login.py  register.py
src/composition/: __init__.py  ioc.py
src/configuration/: __init__.py  setting.py
src/domain/auth/exception/: __init__.py  common.py
src/domain/auth/use_case/: __init__.py  login.py  register.py
src/infrastructure/at/jwt/adapter/: __init__.py  access_and_refresh.py  hash_password.py
src/infrastructure/at/jwt/ports/: __init__.py  access_and_refresh.py  hash_password.py
src/infrastructure/db/postgres/adapter/: __init__.py  role.py  user.py  user_role.py
src/infrastructure/db/postgres/connection/: __init__.py  connection.py
src/infrastructure/db/postgres/help/: __init__.py  create_and_delete.py
src/infrastructure/db/postgres/models/: __init__.py  role.py  user.py  user_role.py
src/infrastructure/db/postgres/ports/: __init__.py  role.py  user.py  user_role.py
src/infrastructure/db/redis/adapter/: __init__.py  jwt.py  user_attempt.py  user_code.py
src/infrastructure/smtp/adapter/: __init__.py  verify_user.py
src/infrastructure/smtp/ports/: __init__.py  verify_code.py
src/presentation/controllers/: __init__.py
src/presentation/controllers/auth/: __init__.py  login.py  register.py
src/presentation/exeptions/: __init__.py  auth.py
src/presentation/request/auth/: __init__.py  login.py  register.py
(+6 files in other folders)
