[tool.poetry]
name = "shop"
version = "0.1.0"
description = ""
authors = ["PolcovnicMiya <aleksandrsgibnev39@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
sqlalchemy = "^2.0.36"
uvicorn = "^0.32.0"
pytest = "^8.3.3"
asyncpg = "^0.30.0"
redis = "^5.2.0"
pyjwt = "^2.9.0"
dependency-injector = "^4.42.0"
pydantic = {extras = ["email"], version = "^2.10.2"}
pydantic-settings = "^2.6.1"
psycopg2 = "^2.9.10"
bcrypt = "^4.2.0"
setuptools = "^75.6.0"
aioredis = "^2.0.1"
python-multipart = "^0.0.19"
cryptography = "^44.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
